# n2s

./: .gitignore  .rustfmt.toml  Cargo.toml  executions.json
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  AuthContext.tsx  CustomNode.tsx  ExecutionHistory.css  ExecutionHistory.tsx  Header.css  Header.tsx  Login.css  Login.tsx  ModelSelector.tsx  PrivateRoute.tsx  Sidebar.tsx  WorkflowEditor.css  WorkflowEditor.tsx  WorkflowManagement.css  WorkflowManagement.tsx  api.ts  index.css
src/: error.rs  main.rs  workflow.rs
src/auth/: handlers.rs  mod.rs
src/workflow/: mod.rs  model.rs  sse.rs
src/workflow/node/: condition.rs  http.rs  input.rs  llm.rs  lua_script.rs  mod.rs  output.rs  postgresql.rs  read_file.rs  write_file.rs
