[package]
name = "n2s"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.3"
chrono = { version = "0.4", features = ["serde", "std"] }
log = "0.4"
log4rs = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3.31"
async-openai = "0.29.1"
uuid = { version = "1.5", features = ["v4", "serde"] }
reqwest = "0.12.23"
